--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>KRUNIKI Academy</title>
+    <title>KRUNIKI Academy</title>
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
   <!-- 🔗 เชื่อมไฟล์ CSS -->
   <link rel="stylesheet" href="assets/style.css">
@@ -35,7 +34,7 @@
     </button>
   </div>
 
-  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation" hidden>
+  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation">
     <a href="about.html">เกี่ยวกับ</a>
     <a href="services.html">บริการ</a>
     <a href="resources.html">Resources</a>
