--- a/index.html
+++ b/index.html
@@ -172,13 +172,16 @@
   </a>
 </div>
 
-     <a class="card" href="service-programs.html">
-  <div class="kicker">3) Programs</div>
-  <h3>โปรแกรม Self-Healing (คอร์ส / เวิร์กช็อป)</h3>
-  <p>
-    เส้นทางเยียวยาเชิงระบบ ผ่านสติ ความนิ่ง ลมหายใจ และการฝึกที่ “ทำได้จริงในชีวิตประจำวัน”
-  </p>
-</a>
+<a href="service-programs.html" class="card cardLink">
+        <div class="kicker">Programs</div>
+        <h3>โปรแกรม Self-Healing</h3>
+        <p>
+          เส้นทางเยียวยาเชิงระบบ  
+          ผ่านสติ ความนิ่ง และการฝึกที่ทำได้จริง
+        </p>
+        <span class="btnGhost">ดูโปรแกรม →</span>
+      </a>
+    
       <div class="card">
         <div class="kicker">Practices</div>
         <h3>การฝึกความนิ่งและลมหายใจอย่างลึกซึ้ง</h3>
