--- a/index.html
+++ b/index.html
@@ -182,18 +182,29 @@
         <span class="btnGhost">ดูโปรแกรม →</span>
       </a>
     
-      <div class="card">
-        <div class="kicker">Practices</div>
-        <h3>การฝึกความนิ่งและลมหายใจอย่างลึกซึ้ง</h3>
-        <p>Stillness-based &amp; Breath-based Practices เพื่อปรับสมดุลระบบประสาท</p>
-      </div>
+  <a href="practices.html" class="card cardLink" aria-label="ไปหน้าการฝึกความนิ่งและลมหายใจ">
+  <div class="kicker">Practices</div>
+  <h3>การฝึกความนิ่งและลมหายใจอย่างลึกซึ้ง</h3>
+  <p>Stillness-based &amp; Breath-based Practices เพื่อปรับสมดุลระบบประสาท</p>
 
-      <div class="card">
-        <div class="kicker">Learning</div>
-        <h3>แหล่งเรียนรู้และเนื้อหาเชิงการศึกษา</h3>
-        <p>Learning Resources &amp; Educational Content สำหรับผู้ที่ต้องการเข้าใจการเยียวยาอย่างลึกและมีรากฐาน</p>
-      </div>
-    </div>
+  <div class="cardAction">
+    <span class="btnGhost">ดูแนวทางการฝึก →</span>
+  </div>
+</a>
+
+      <a href="learning.html" class="card cardLink" aria-label="ไปหน้าแหล่งเรียนรู้และเนื้อหาเชิงการศึกษา">
+  <div class="kicker">Learning</div>
+  <h3>แหล่งเรียนรู้และเนื้อหาเชิงการศึกษา</h3>
+  <p>
+    Learning Resources &amp; Educational Content
+    สำหรับผู้ที่ต้องการเข้าใจการเยียวยาอย่างลึกและมีรากฐาน
+  </p>
+
+  <div class="cardAction">
+    <span class="btnGhost">เข้าสู่แหล่งเรียนรู้ →</span>
+  </div>
+</a>
+
   </section>
 
   <!-- RESOURCES -->
