--- a/practices.html
+++ b/practices.html
@@ -62,7 +62,13 @@
     <div style="margin-top:14px;color:var(--muted2);font-size:13px;line-height:1.8;">
       หมายเหตุ: หากคุณมีโรคประจำตัวรุนแรง, ตั้งครรภ์, หรือมีภาวะวิตกกังวล/แพนิครุนแรง
       ให้ปรึกษาผู้เชี่ยวชาญก่อนเริ่มฝึกหายใจเชิงลึก และเริ่มจากระดับ “เบามาก” เท่านั้น
-    </div>
+   <div class="banner" aria-label="KRUNIKI Practices Banner">
+  <img
+    src="practices-banner.webp"
+    alt="KRUNIKI Practices — Breath, Stillness, Meditation"
+    loading="lazy"
+    decoding="async">
+</div>
   </section>
 
   <!-- QUICK START -->
