--- a/about.html
+++ b/about.html
@@ -10,17 +10,22 @@
 
 <body>
 
-  <body>
+<header class="siteHeader">
+  <div class="navInner">
+    <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+      <span class="dot" aria-hidden="true"></span>
+      <span class="brandText">KRUNIKI</span>
+    </a>
 
-<div id="site-header"></div>
+    <nav class="navLinks" aria-label="Primary navigation">
+      <a href="about.html" aria-current="page">เกี่ยวกับ</a>
+      <a href="services.html">บริการ</a>
+      <a href="resources.html">Resources</a>
+      <a href="#contact">ติดต่อ</a>
+    </nav>
 
-<main>
-  <!-- เนื้อหาหน้านี้ -->
-</main>
-
-  <header>
- 
-  <div class="right">
+    <!-- SOCIAL ICONS (Top right) -->
+    <div class="right">
       <div class="social" aria-label="ช่องทางโซเชียลของ KRUNIKI">
         <a class="iconbtn gold" href="https://lin.ee/qdp20di" target="_blank" rel="noopener" aria-label="LINE OA">
           <svg viewBox="0 0 24 24" aria-hidden="true">
@@ -55,7 +60,20 @@
         </a>
       </div>
     </div>
+
+    <button class="navToggle"
+      type="button"
+      aria-label="เปิดเมนู"
+      aria-expanded="false"
+      aria-controls="mobileMenu">☰</button>
   </div>
+
+  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation" hidden>
+    <a href="about.html" aria-current="page">เกี่ยวกับ</a>
+    <a href="services.html">บริการ</a>
+    <a href="resources.html">Resources</a>
+    <a href="#contact">ติดต่อ</a>
+  </nav>
 </header>
 
 <main class="wrap">
