--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<body>
 <header class="siteHeader">
   <div class="navInner">
     <a class="brand" href="index.html" aria-label="KRUNIKI Home">
@@ -24,19 +24,22 @@
       <a href="#contact">ติดต่อ</a>
     </nav>
 
- <button class="navToggle"
+  <button class="navToggle"
       type="button"
       aria-label="เปิดเมนู"
       aria-expanded="false"
-      aria-controls="mobileMenu">☰</button>
+      aria-controls=“mobileMenu">
+     ☰
+  </button>
   </div>
 
-  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation" hidden>
+  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation">
     <a href="about.html" aria-current="page">เกี่ยวกับ</a>
     <a href="services.html">บริการ</a>
     <a href="resources.html">Resources</a>
     <a href="#contact">ติดต่อ</a>
   </nav>
+</header>
   
     <!-- SOCIAL ICONS (Top right) -->
     <div class="right">
