--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
   </button>
   </div>
 
-  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation">
+  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation" hidden>
     <a href="about.html" aria-current="page">เกี่ยวกับ</a>
     <a href="services.html">บริการ</a>
     <a href="resources.html">Resources</a>
