--- a/about.html
+++ b/about.html
@@ -16,12 +16,13 @@
       <span class="brandText">KRUNIKI</span>
     </a>
 
-    <nav class="navLinks" aria-label="Primary navigation">
-      <a href="about.html" aria-current="page">เกี่ยวกับ</a>
-      <a href="services.html">บริการ</a>
-      <a href="resources.html">Resources</a>
-      <a href="#contact">ติดต่อ</a>
-    </nav>
+   <nav class="navLinks" aria-label="Primary navigation">
+  <a href="index.html">หน้าแรก</a>
+  <a href="about.html" aria-current="page">เกี่ยวกับ</a>
+  <a href="services.html">บริการ</a>
+  <a href="resources.html">Resources</a>
+  <a href="#contact">ติดต่อ</a>
+</nav>
 
   <button class="navToggle"
       type="button"
@@ -223,8 +224,25 @@
         </ul>
 
         <div class="ctaRow" style="margin-top:12px;">
-          <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">ทัก LINE แล้วบอก “จังหวะชีวิตตอนนี้”</a>
-          <a class="btn" href="resources.html">ไปหน้า Resources</a>
+  <a class="btn primary"
+     href="https://lin.ee/qdp20di"
+     target="_blank"
+     rel="noopener">
+    ทัก LINE แล้วบอก “จังหวะชีวิตตอนนี้”
+  </a>
+
+  <a class="btn"
+     href="resources.html">
+    ไปหน้า Resources
+  </a>
+
+  <!-- ปุ่มที่เพิ่ม -->
+  <a class="btn ghost"
+     href="index.html">
+    ← กลับหน้า HOME
+  </a>
+</div>
+
         </div>
       </div>
     </div>
