--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <title>About — KRUNIKI (ครูนิกี้)</title>
   <meta name="description" content="About KRUNIKI • ครูนิกี้ • KRUNIKI SoulSync System™ — เส้นทางเยียวยาภายในด้วยสติ ความนิ่ง และการปฏิบัติที่ทำซ้ำได้" />
   <link rel="stylesheet" href="assets/style.css">
+  <script src="assets/main.js" defer></script>
 </head>
 
 <body>
