--- a/services.html
+++ b/services.html
@@ -12,20 +12,20 @@
 <body>
 <header class="siteHeader">
   <div class="navInner">
-    <a class="brand" href="index.html"> 
+    <a class="brand" href="index.html">
       <span class="dot" aria-hidden="true"></span>
       <span class="brandText">KRUNIKI</span>
     </a>
 
-    <nav class="navLinks" aria-label="Primary navigation”>
+    <nav class="navLinks" aria-label="Primary navigation">
       <a href="index.html">หน้าแรก</a>
       <a href="about.html">เกี่ยวกับ</a>
       <a href="services.html" aria-current="page">บริการ</a>
       <a href="resources.html">Resources</a>
       <a href="#contact">ติดต่อ</a>
     </nav>
-    
-<button class="navToggle"
+
+    <button class="navToggle"
       type="button"
       aria-label="เปิดเมนู"
       aria-expanded="false"
