--- a/services.html
+++ b/services.html
@@ -89,9 +89,13 @@
 <main class="wrap">
 
   <!-- Hero -->
-  <section class="panel">
-    <section class="services-hero">
-      <h1>บริการเยียวยาหัวใจ<br>ภายใต้ KRUNIKI SoulSync System™</h1>
+<section class="panel">
+  <section class="services-hero">
+    <h1>
+      บริการเยียวยาหัวใจ<br>
+      ภายใต้ <span class="goldText">KRUNIKI SoulSync System™</span>
+    </h1>
+
 
       <p class="services-sub">
         เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
