--- a/services.html
+++ b/services.html
@@ -115,76 +115,86 @@
   </section>
 
   <!-- Services list (Money area) -->
-  <section class="panel" style="margin-top:16px;">
-    <div class="resHead">
-      <h2>3 บริการหลัก (เลือกให้ตรงหัวใจตอนนี้)</h2>
-      <div class="resTag">Start • Continue • Deepen</div>
-    </div>
-
-    <div class="resBody">
-      <div class="grid2">
-        <a class="card cardLink featured" href="service-20min.html"
-   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
-  <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
-  <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
-
-<p>
-  เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณ <strong>กลับสู่ baseline ของระบบประสาท</strong>
-  และมีพื้นที่ของหัวใจได้หายใจ<br>
-  โดยใช้หลักการ <strong>self-regulation</strong> เพื่อลดความตึงของระบบประสาท
-  และคืนความนิ่งให้การรับรู้  
-  เหมาะสำหรับวันที่ใจหนัก ล้า หรือ “หลุดจากตัวเอง” จนอยากกลับมาให้เร็วและปลอดภัย
-</p>
-
-<div class="miniBullets">
-    <span>• Regulation-focused</span>
-    <span>• Grounded & practical</span>
-    <span>• Clear next step</span>
+ <section class="panel" style="margin-top:16px;">
+  <div class="resHead">
+    <h2>3 บริการหลัก (เลือกให้ตรงหัวใจตอนนี้)</h2>
+    <div class="resTag">Start • Continue • Deepen</div>
   </div>
 
-  <div class="microProof">
-    หลังจบ 20 นาที คนมักรู้สึกว่า “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”<br>
-<span style="opacity:.7;">(สอดคล้องกับหลักการ nervous system regulation)</span>
- </div>
-</a>
-        <a class="card cardLink" href="service-private.html" aria-label="KRUNIKI Private Guidance">
-          <div class="kicker">2) Private Guidance</div>
-          <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
-          <p>
-  การดูแลต่อเนื่องแบบส่วนตัว สำหรับคนที่ต้องการ “จัดระบบชีวิต–หัวใจ” อย่างเป็นลำดับ<br>
-  เราทำงานแบบมีโครงสร้าง: <strong>ประเมินจังหวะและ baseline</strong> → วางแผนการฝึกที่ทำได้จริง →
-  ติดตามผลและปรับให้เข้ากับชีวิตประจำวัน<br>
-  เหมาะกับผู้ที่อยากสร้างความมั่นคงภายในแบบระยะยาว
-  โดยยืนบน <strong>self-regulation</strong> (สติ • ความนิ่ง • ลมหายใจ) และขอบเขตที่ปลอดภัย
-</p>
-<div class="microProof">
-  สิ่งที่คนมักสังเกตได้เมื่อทำต่อเนื่อง: “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
-</div>
-</a>
+  <div class="resBody">
+    <div class="grid2">
 
-        <a class="card cardLink" href="service-programs.html" aria-label="Programs ภายใต้ KRUNIKI SoulSync System">
-          <div class="kicker">3) Programs</div>
-          <h3>Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
-          <p>
-  <strong>เส้นทางหลัก (Main Path)</strong> ของ KRUNIKI สำหรับผู้ที่ต้องการการเปลี่ยนแปลงแบบเป็นระบบ<br>
-  Programs ถูกออกแบบเป็น <strong>Learning &amp; Practice</strong> ที่ค่อย ๆ ลึกขึ้นตามลำดับ
-  เพื่อให้ความนิ่งและความชัด “อยู่ได้จริง” ในชีวิตประจำวัน (ไม่ใช่คอร์สสั้นแบบจบแล้วหาย)<br>
-  เหมาะสำหรับผู้ที่พร้อมฝึกต่อเนื่อง และอยากมีกรอบการเรียนรู้ที่ <strong>ยืนพื้น ชัด และทำซ้ำได้</strong>
-</p>
-<div class="microProof">
-  คนที่เหมาะกับเส้นทางนี้มักกำลังมองหา: “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
-</div>
-</a>
+      <a class="card cardLink featured" href="service-20min.html"
+         aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
+        <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
+        <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
 
-        <a class="card cardLink" href="service-tools.html" aria-label="Tools & Practices">
-          <div class="kicker">Bonus</div>
-          <h3>Tools &amp; Practices — เครื่องมือดูแลหัวใจ</h3>
-          <p>สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง เพื่อความนิ่งและความมั่นคงภายใน</p>
-        </a>
-      </div>
+        <p>
+          เซสชันสั้นแบบมีโครงสร้าง ที่ช่วยให้คุณ <strong>กลับมาอยู่กับตัวเองได้ง่ายขึ้น</strong>
+          และให้หัวใจได้หายใจอีกครั้ง<br>
+          เราใช้หลัก <strong>self-regulation</strong> (สติ • ความนิ่ง • ลมหายใจ)
+          เพื่อช่วยให้ความตึงค่อย ๆ คลาย และพยุงระบบประสาทให้กลับสู่ความสงบในแบบที่เป็นไปได้จริง<br>
+          เหมาะกับวันที่ใจหนัก ล้า หรือรู้สึก “หลุดจากตัวเอง” และอยากกลับมาอย่างอ่อนโยนแต่ชัดเจน
+        </p>
+
+        <div class="miniBullets">
+          <span>• Gentle regulation</span>
+          <span>• Grounded & practical</span>
+          <span>• Clear next step</span>
+        </div>
+
+        <div class="microProof">
+          หลังจบ 20 นาที คนมักสังเกตได้ว่า “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”<br>
+          <span style="opacity:.7;">(ผลลัพธ์อาจต่างกันในแต่ละคน แต่เราจะไม่เร่ง และเคารพจังหวะของคุณเสมอ)</span>
+        </div>
+      </a>
+
+      <a class="card cardLink" href="service-private.html" aria-label="KRUNIKI Private Guidance">
+        <div class="kicker">2) Private Guidance</div>
+        <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
+
+        <p>
+          การดูแลต่อเนื่องแบบส่วนตัว สำหรับคนที่อยาก “จัดระบบชีวิต–หัวใจ” ให้ค่อย ๆ มั่นคงขึ้นอย่างเป็นลำดับ<br>
+          เราทำงานแบบมีโครงสร้าง แต่ยังคงความอ่อนโยน:
+          <strong>สำรวจจังหวะและ baseline</strong> → วางแผนการฝึกที่ทำได้จริง → ติดตามผลและปรับให้เข้ากับชีวิตประจำวัน<br>
+          เหมาะกับผู้ที่ต้องการความต่อเนื่องระยะยาว โดยยืนบน <strong>self-regulation</strong>
+          (สติ • ความนิ่ง • ลมหายใจ) และขอบเขตที่ปลอดภัย
+        </p>
+
+        <div class="microProof">
+          สิ่งที่คนมักสังเกตได้เมื่อทำต่อเนื่อง: “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
+        </div>
+      </a>
+
+      <a class="card cardLink" href="service-programs.html" aria-label="Programs ภายใต้ KRUNIKI SoulSync System">
+        <div class="kicker">3) Programs</div>
+        <h3>Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
+
+        <p>
+          <strong>เส้นทางหลัก (Main Path)</strong> ของ KRUNIKI สำหรับคนที่อยากเปลี่ยนแปลงแบบ “ค่อย ๆ ลึกขึ้น” และอยู่ได้จริง<br>
+          Programs ถูกออกแบบเป็น <strong>Learning &amp; Practice</strong> ที่ไล่ระดับตามลำดับ
+          เพื่อให้ความนิ่งและความชัด “อยู่กับคุณ” ในชีวิตประจำวัน (ไม่ใช่แค่ดีขึ้นชั่วคราวแล้วหายไป)<br>
+          เหมาะกับผู้ที่พร้อมฝึกต่อเนื่อง และอยากมีกรอบที่ <strong>ชัด ทำตามได้ และทำซ้ำได้</strong>
+        </p>
+
+        <div class="microProof">
+          คนที่เหมาะกับเส้นทางนี้มักกำลังมองหา: “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
+        </div>
+      </a>
+
+      <a class="card cardLink" href="service-tools.html" aria-label="Tools & Practices">
+        <div class="kicker">Bonus</div>
+        <h3>Tools &amp; Practices — เครื่องมือดูแลหัวใจ</h3>
+        <p>
+          สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง
+          เพื่อช่วยพยุงความนิ่ง และความมั่นคงภายในในจังหวะของคุณ
+        </p>
+      </a>
+
     </div>
-  </section>
-
+  </div>
+</section>
+  
   <!-- ===== Bottom Booking CTA ===== -->
 <section class="panel">
   <div class="bottomCta">
