--- a/services.html
+++ b/services.html
@@ -88,14 +88,27 @@
 
 <main class="wrap">
 
-  <!-- Hero -->
+<!-- Hero -->
 <section class="panel">
   <section class="services-hero">
-    <h1>
-      บริการเยียวยาหัวใจ<br>
-      ภายใต้ <span class="goldText">KRUNIKI SoulSync System™</span>
+
+    <h1 class="heroTitle">
+      <span class="goldMain">KRUNIKI Healing System™</span><br>
+      <span class="goldSub">ภายใต้ KRUNIKI SoulSync System™</span>
     </h1>
 
+    <p class="heroQuote">
+      ระบบเยียวยาหัวใจที่ไม่เร่ง ไม่ฝืน และพาคุณกลับสู่ความมั่นคงจากภายใน
+    </p>
+
+    <div class="heroActions">
+      <a class="btn primary" href="certification.html">
+        ดูรายละเอียดระบบ KRUNIKI Healing System™
+      </a>
+    </div>
+
+  </section>
+</section>
 
       <p class="services-sub">
         เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
