--- a/services.html
+++ b/services.html
@@ -90,13 +90,14 @@
 
 <!-- Hero -->
 <section class="panel">
-  <section class="services-hero">
+  <div class="wrap">
+    <section class="services-hero">
 
-    <h1 class="heroTitle">
-      <span class="goldMain">KRUNIKI Healing System™</span><br>
-      <span class="goldSub">ภายใต้ KRUNIKI SoulSync System™</span>
-    </h1>
-
+    <h1 class="servicesHeroTitle">
+  <span class="goldMain">KRUNIKI Healing System™</span><br>
+  <span class="goldSub">ภายใต้ KRUNIKI SoulSync System™</span>
+</h1>
+      
     <p class="heroQuote">
       ระบบเยียวยาหัวใจที่ไม่เร่ง ไม่ฝืน และพาคุณกลับสู่ความมั่นคงจากภายใน
     </p>
@@ -107,7 +108,8 @@
       </a>
     </div>
 
-  </section>
+    </section>
+  </div>
 </section>
 
       <p class="services-sub">
