--- a/services.html
+++ b/services.html
@@ -108,34 +108,36 @@
       </a>
     </div>
 
+     <!-- ✅ ปิดแค่ส่วนภายใน heroCard / heroBox เท่านั้น (ถ้ามี div ครอบอยู่) -->
     </section>
   </div>
-</section>
 
-      <p class="services-sub">
-        เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
-        ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ<br>
-        โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
-      </p>
+  <!-- ✅ บล็อกนี้ต้องอยู่ใน services-hero -->
+  <p class="services-sub">
+    เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
+    ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ<br>
+    โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
+  </p>
 
-      <blockquote class="services-signature">
-        “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
-      </blockquote>
+  <blockquote class="services-signature">
+    “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
+  </blockquote>
 
-      <div class="ctaRow" style="justify-content:center; margin-top:18px;">
-        <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">เริ่มคุยกับครูนิกี้ (LINE)</a>
-        <a class="btn" href="index.html#contact">นัดหมาย</a>
-      </div>
-    </section>
-  </section>
+  <div class="ctaRow" style="justify-content:center; margin-top:18px;">
+    <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">เริ่มคุยกับครูนิกี้ (LINE)</a>
+    <a class="btn" href="index.html#contact">นัดหมาย</a>
+  </div>
 
-  <!-- Services list (Money area) -->
- <section class="panel" style="margin-top:16px;">
+</section> <!-- ✅ ปิด .services-hero -->
+</section> <!-- ✅ ปิด .panel -->
+
+<!-- Services list -->
+<section class="panel" style="margin-top:16px;">
   <div class="resHead">
     <h2>3 บริการหลัก (เลือกให้ตรงหัวใจตอนนี้)</h2>
     <div class="resTag">Start • Continue • Deepen</div>
   </div>
-
+  
   <div class="resBody">
     <div class="grid2">
 
