--- a/services.html
+++ b/services.html
@@ -90,14 +90,12 @@
 
 <!-- Hero -->
 <section class="panel">
-  <div class="wrap">
-    <section class="services-hero">
-
+  <section class="services-hero">
     <h1 class="servicesHeroTitle">
-  <span class="goldMain">KRUNIKI Healing System™</span><br>
-  <span class="goldSub">ภายใต้ KRUNIKI SoulSync System™</span>
-</h1>
-      
+      <span class="goldMain">KRUNIKI Healing System™</span><br>
+      <span class="goldSub">ภายใต้ KRUNIKI SoulSync System™</span>
+    </h1>
+
     <p class="heroQuote">
       ระบบเยียวยาหัวใจที่ไม่เร่ง ไม่ฝืน และพาคุณกลับสู่ความมั่นคงจากภายใน
     </p>
@@ -108,25 +106,23 @@
       </a>
     </div>
 
-     <!-- ✅ ปิดแค่ส่วนภายใน heroCard / heroBox เท่านั้น (ถ้ามี div ครอบอยู่) -->
-    </section>
-  </div>
+    <!-- ✅ ย้ายบล็อกนี้เข้ามาไว้ "ใน" services-hero -->
+    <p class="services-sub">
+      เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
+      ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ<br>
+      โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
+    </p>
 
-  <!-- ✅ บล็อกนี้ต้องอยู่ใน services-hero -->
-  <p class="services-sub">
-    เส้นทางฟื้นคืนพลังรักแท้จากภายใน<br>
-    ผ่านการรับฟัง การฝึก และการบูรณาการอย่างเป็นระบบ<br>
-    โดยไม่เร่ง ไม่ตัดสิน และไม่บังคับให้คุณ “ต้องดีขึ้น”
-  </p>
+    <blockquote class="services-signature">
+      “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
+    </blockquote>
 
-  <blockquote class="services-signature">
-    “ฉันไม่ซ่อมคุณ — ฉันพาคุณกลับมารู้จักตัวเองอีกครั้ง”
-  </blockquote>
-
-  <div class="ctaRow" style="justify-content:center; margin-top:18px;">
-    <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">เริ่มคุยกับครูนิกี้ (LINE)</a>
-    <a class="btn" href="index.html#contact">นัดหมาย</a>
-  </div>
+    <div class="ctaRow" style="justify-content:center; margin-top:18px;">
+      <a class="btn primary" href="https://lin.ee/qdp20di" target="_blank" rel="noopener">เริ่มคุยกับครูนิกี้ (LINE)</a>
+      <a class="btn" href="index.html#contact">นัดหมาย</a>
+    </div>
+  </section>
+</section>
 
 </section> <!-- ✅ ปิด .services-hero -->
 </section> <!-- ✅ ปิด .panel -->
