--- a/services.html
+++ b/services.html
@@ -143,10 +143,24 @@
   <div class="resBody">
     <div class="grid2">
 
-      <a class="card cardLink featured" href="service-20min.html"
-         aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
-        <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
-        <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
+      <a class="card cardLink featured cardWithImage"
+   href="service-20min.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
+
+  <!-- Image -->
+  <div class="cardImage">
+    <img src="assets/images/card-heart.webp"
+         alt="KRUNIKI Heart Awakening — Safe Return to the Heart"
+         loading="lazy" />
+  </div>
+
+  <!-- Content -->
+  <div class="cardBody">
+    <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
+    <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
+    <!-- เนื้อหาเดิมของนิกี้อยู่ตรงนี้ได้เลย -->
+  </div>
+</a>
 
         <p>
           เซสชันสั้นแบบมีโครงสร้าง ที่ช่วยให้คุณ <strong>กลับมาอยู่กับตัวเองได้ง่ายขึ้น</strong>
