--- a/services.html
+++ b/services.html
@@ -143,23 +143,21 @@
   <div class="resBody">
     <div class="grid2">
 
-      <a class="card cardLink featured cardWithImage"
+   <a class="card cardLink featured cardWithImage"
    href="service-20min.html"
    aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
 
-  <!-- Image -->
   <div class="cardImage">
-    <img src="assets/images/card-heart.webp"
-         alt="KRUNIKI Heart Awakening — Safe Return to the Heart"
-         loading="lazy" />
+    <img src="card-heart.webp"
+         alt="KRUNIKI Heart Awakening"
+         loading="lazy">
   </div>
 
-  <!-- Content -->
   <div class="cardBody">
     <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
     <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
-    <!-- เนื้อหาเดิมของนิกี้อยู่ตรงนี้ได้เลย -->
   </div>
+
 </a>
 
         <p>
