--- a/services.html
+++ b/services.html
@@ -138,21 +138,14 @@
   <div class="resBody">
     <div class="grid2">
 
-   <a class="card cardLink featured cardWithImage"
-   href="service-20min.html"
-   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
-
-  <div class="cardImage">
-    <img src="card-heart.webp"
-         alt="KRUNIKI Heart Awakening"
-         loading="lazy">
+<a class="card cardLink" href="service-20min.html">
+  <div class="cardImg">
+    <img src="images/card-heart.webp" alt="Heart Awakening">
   </div>
 
-  <div class="cardBody">
-    <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
-    <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
-  </div>
-
+  <div class="kicker">1) Heart Awakening</div>
+  <h3>ปลุกหัวใจให้กลับมารู้สึกอย่างปลอดภัย</h3>
+  <p>ไม่เร่ง ไม่ฝืน — แต่พากลับมาอยู่กับตัวเองได้จริง</p>
 </a>
 
         <p>
