--- a/services.html
+++ b/services.html
@@ -138,14 +138,24 @@
   <div class="resBody">
     <div class="grid2">
 
-<a class="card cardLink" href="service-20min.html">
-  <div class="cardImg">
-    <img src="images/card-heart.webp" alt="Heart Awakening">
-  </div>
+<a class="card cardLink featured" href="service-20min.html"
+   aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
 
-  <div class="kicker">1) Heart Awakening</div>
-  <h3>ปลุกหัวใจให้กลับมารู้สึกอย่างปลอดภัย</h3>
-  <p>ไม่เร่ง ไม่ฝืน — แต่พากลับมาอยู่กับตัวเองได้จริง</p>
+  <img class="cardImg" src="card-heart.webp"
+       alt="KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที"
+       loading="lazy">
+
+  <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
+  <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
+
+  <p>
+    เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณ <strong>กลับสู่ baseline ของระบบประสาท</strong>
+    และมีพื้นที่ของหัวใจได้หายใจ โดยไม่เร่ง ไม่ฝืน
+  </p>
+
+  <div class="cardCta">
+    <span class="btn mini">ดูรายละเอียด</span>
+  </div>
 </a>
 
         <p>
