--- a/services.html
+++ b/services.html
@@ -178,12 +178,25 @@
         </div>
       </a>
 
-      <a class="card cardLink" href="service-private.html" aria-label="KRUNIKI Private Guidance">
-  <img class="cardImg" src="card-guidance.webp" alt="KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว" loading="lazy">
+   <a class="card cardLink" href="service-private.html"
+   aria-label="KRUNIKI Private Guidance">
+
+  <img
+    class="cardImg"
+    src="card-guidance.webp"
+    alt="KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว"
+    loading="lazy"
+  >
 
   <div class="kicker">2) Private Guidance</div>
+
   <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
-  <!-- เนื้อหาอื่นๆของการ์ด -->
+
+  <!-- ✅ ปุ่มทางสายตา (คลิกแล้วไปหน้าเดียวกัน) -->
+  <span class="cardBtn">
+    อ่านรายละเอียด
+  </span>
+
 </a>
 
       
