--- a/services.html
+++ b/services.html
@@ -153,9 +153,11 @@
     และมีพื้นที่ของหัวใจได้หายใจ โดยไม่เร่ง ไม่ฝืน
   </p>
 
-  <div class="cardCta">
-    <span class="btn mini">ดูรายละเอียด</span>
-  </div>
+<!-- ✅ ปุ่มทางสายตา (คลิกแล้วไปหน้าเดียวกัน) -->
+  <span class="cardBtn">
+    อ่านรายละเอียด
+  </span>
+
 </a>
 
         <p>
