--- a/services.html
+++ b/services.html
@@ -138,47 +138,54 @@
   <div class="resBody">
     <div class="grid2">
 
-<a class="card cardLink featured" href="service-20min.html"
+<a class="card cardLink featured"
+   href="service-20min.html"
    aria-label="เปิดรายละเอียดบริการ: KRUNIKI Heart Awakening — การปลุกหัวใจ 20 นาที">
 
-  <img class="cardImg" src="card-heart.webp"
+  <img class="cardImg"
+       src="card-heart.webp"
        alt="KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที"
        loading="lazy">
 
-  <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
-  <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
+  <div class="cardBody">
 
-  <p>
-    เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณ <strong>กลับสู่ baseline ของระบบประสาท</strong>
-    และมีพื้นที่ของหัวใจได้หายใจ โดยไม่เร่ง ไม่ฝืน
-  </p>
+    <div class="kicker">1) 20-Minute Session • Nervous System Reset</div>
+    <h3>KRUNIKI Heart Awakening — ปลุกหัวใจ 20 นาที</h3>
 
-<!-- ✅ ปุ่มทางสายตา (คลิกแล้วไปหน้าเดียวกัน) -->
-  <span class="cardBtn">
-    อ่านรายละเอียด
-  </span>
+    <p>
+      เซสชันสั้นแบบมีโครงสร้าง เพื่อช่วยให้คุณ
+      <strong>กลับสู่ baseline ของระบบประสาท</strong>
+      และมีพื้นที่ของหัวใจได้หายใจ โดยไม่เร่ง ไม่ฝืน
+    </p>
 
+    <p>
+      เราใช้หลัก <strong>self-regulation</strong>
+      (สติ • ความนิ่ง • ลมหายใจ)
+      เพื่อช่วยให้ความตึงค่อย ๆ คลาย และพยุงระบบประสาทให้กลับสู่ความสงบ
+      ในแบบที่เป็นไปได้จริง
+    </p>
+
+    <div class="miniBullets">
+      <span>• Gentle regulation</span>
+      <span>• Grounded &amp; practical</span>
+      <span>• Clear next step</span>
+    </div>
+
+    <div class="microProof">
+      หลังจบ 20 นาที คนมักสังเกตได้ว่า
+      “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”
+      <br>
+      <span style="opacity:.7;">
+        (ผลลัพธ์อาจต่างกันในแต่ละคน แต่เราจะไม่เร่ง และเคารพจังหวะของคุณเสมอ)
+      </span>
+    </div>
+
+    <!-- ปุ่มทางสายตา -->
+    <span class="cardBtn">อ่านรายละเอียด</span>
+
+  </div>
 </a>
 
-        <p>
-          เซสชันสั้นแบบมีโครงสร้าง ที่ช่วยให้คุณ <strong>กลับมาอยู่กับตัวเองได้ง่ายขึ้น</strong>
-          และให้หัวใจได้หายใจอีกครั้ง<br>
-          เราใช้หลัก <strong>self-regulation</strong> (สติ • ความนิ่ง • ลมหายใจ)
-          เพื่อช่วยให้ความตึงค่อย ๆ คลาย และพยุงระบบประสาทให้กลับสู่ความสงบในแบบที่เป็นไปได้จริง<br>
-          เหมาะกับวันที่ใจหนัก ล้า หรือรู้สึก “หลุดจากตัวเอง” และอยากกลับมาอย่างอ่อนโยนแต่ชัดเจน
-        </p>
-
-        <div class="miniBullets">
-          <span>• Gentle regulation</span>
-          <span>• Grounded & practical</span>
-          <span>• Clear next step</span>
-        </div>
-
-        <div class="microProof">
-          หลังจบ 20 นาที คนมักสังเกตได้ว่า “ใจนิ่งขึ้นเล็กน้อย” • “หายใจได้เต็มขึ้น” • “คิดชัดขึ้นหนึ่งระดับ”<br>
-          <span style="opacity:.7;">(ผลลัพธ์อาจต่างกันในแต่ละคน แต่เราจะไม่เร่ง และเคารพจังหวะของคุณเสมอ)</span>
-        </div>
-      </a>
 
    <a class="card cardLink" href="service-private.html"
    aria-label="KRUNIKI Private Guidance">
