--- a/services.html
+++ b/services.html
@@ -222,37 +222,40 @@
         </div>
       </a>
    
-<a class="card cardLink" href="service-programs.html"
-   aria-label="Programs ภายใต้ KRUNIKI SoulSync System">
+<a class="card cardLink"
+   href="service-private.html"
+   aria-label="KRUNIKI Private Guidance">
 
   <img class="cardImg"
-       src="card-system.webp"
-       alt="Programs — เส้นทางเรียนรู้และ Self-Healing ภายใต้ KRUNIKI SoulSync System"
+       src="card-guidance.webp"
+       alt="KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว"
        loading="lazy">
 
-  <div class="kicker">3) Programs</div>
+  <div class="cardBody">
 
-  <h3>Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
+    <div class="kicker">2) Private Guidance</div>
+    <h3>KRUNIKI Private Guidance — การดูแลต่อเนื่องแบบส่วนตัว</h3>
 
-  <!-- ✅ ปุ่มทางสายตา (คลิกแล้วไปหน้า service-programs.html) -->
-  <span class="cardBtn">
-    อ่านรายละเอียด
-  </span>
+    <p>
+      การดูแลต่อเนื่องแบบส่วนตัว สำหรับคนที่อยาก “จัดระบบชีวิต–หัวใจ”
+      ให้ค่อย ๆ มั่นคงขึ้นอย่างเป็นลำดับ<br>
+      เราทำงานแบบมีโครงสร้าง แต่ยังคงความอ่อนโยน:
+      <strong>สำรวจจังหวะและ baseline</strong> → วางแผนการฝึกที่ทำได้จริง → ติดตามผลและปรับให้เข้ากับชีวิตประจำวัน<br>
+      เหมาะกับผู้ที่ต้องการความต่อเนื่องระยะยาว โดยยืนบน <strong>self-regulation</strong>
+      (สติ • ความนิ่ง • ลมหายใจ) และขอบเขตที่ปลอดภัย
+    </p>
 
+    <div class="microProof">
+      สิ่งที่คนมักสังเกตได้เมื่อทำต่อเนื่อง:
+      “กลับมารู้ตัวได้เร็วขึ้น” • “อารมณ์นิ่งขึ้นทีละน้อย” • “ตัดสินใจชัดขึ้น”
+    </div>
+
+    <!-- ✅ ปุ่มทางสายตา (คลิกได้เพราะทั้งการ์ดเป็นลิงก์) -->
+    <span class="cardBtn">อ่านรายละเอียด</span>
+
+  </div>
 </a>
 
-     
-        <p>
-          <strong>เส้นทางหลัก (Main Path)</strong> ของ KRUNIKI สำหรับคนที่อยากเปลี่ยนแปลงแบบ “ค่อย ๆ ลึกขึ้น” และอยู่ได้จริง<br>
-          Programs ถูกออกแบบเป็น <strong>Learning &amp; Practice</strong> ที่ไล่ระดับตามลำดับ
-          เพื่อให้ความนิ่งและความชัด “อยู่กับคุณ” ในชีวิตประจำวัน (ไม่ใช่แค่ดีขึ้นชั่วคราวแล้วหายไป)<br>
-          เหมาะกับผู้ที่พร้อมฝึกต่อเนื่อง และอยากมีกรอบที่ <strong>ชัด ทำตามได้ และทำซ้ำได้</strong>
-        </p>
-
-        <div class="microProof">
-          คนที่เหมาะกับเส้นทางนี้มักกำลังมองหา: “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
-        </div>
-      </a>
       
  <a class="card cardLink" href="service-tools.html" aria-label="Tools & Practices">
 
