--- a/services.html
+++ b/services.html
@@ -221,32 +221,55 @@
   </div>
 </a>
    
+<a class="card cardLink" href="service-programs.html"
+   aria-label="Programs ภายใต้ KRUNIKI SoulSync System">
 
+  <img class="cardImg"
+       src="card-system.webp"
+       alt="Programs — เส้นทางเรียนรู้และ Self-Healing ภายใต้ KRUNIKI SoulSync System"
+       loading="lazy">
+
+  <div class="kicker">3) Programs</div>
+
+  <h3>Programs — เส้นทางเรียนรู้ &amp; Self-Healing</h3>
+
+  <p>
+    <strong>เส้นทางหลัก (Main Path)</strong> ของ KRUNIKI สำหรับคนที่อยากเปลี่ยนแปลงแบบ “ค่อย ๆ ลึกขึ้น” และอยู่ได้จริง<br>
+    Programs ถูกออกแบบเป็น <strong>Learning &amp; Practice</strong> ที่ไล่ระดับตามลำดับ
+    เพื่อให้ความนิ่งและความชัด “อยู่กับคุณ” ในชีวิตประจำวัน
+    (ไม่ใช่แค่ดีขึ้นชั่วคราวแล้วหายไป)<br>
+    เหมาะกับผู้ที่พร้อมฝึกต่อเนื่อง และอยากมีกรอบที่
+    <strong>ชัด ทำตามได้ และทำซ้ำได้</strong>
+  </p>
+
+  <div class="microProof">
+    คนที่เหมาะกับเส้นทางนี้มักกำลังมองหา:
+    “ระบบที่ไม่ลอย” • “ความต่อเนื่อง” • “ความมั่นคงภายในที่ทำซ้ำได้”
+  </div>
+
+  <!-- ✅ ปุ่มทางสายตา -->
+  <span class="cardBtn">อ่านรายละเอียด</span>
+
+</a>
 
       
  <a class="card cardLink" href="service-tools.html" aria-label="Tools & Practices">
-
   <img class="cardImg"
        src="card-learning.webp"
        alt="Tools & Practices — เครื่องมือดูแลหัวใจภายใต้ KRUNIKI SoulSync System"
        loading="lazy">
 
   <div class="kicker">Bonus</div>
-
   <h3>Tools &amp; Practices — เครื่องมือดูแลหัวใจ</h3>
 
-  <!-- ✅ ปุ่มทางสายตา -->
-  <span class="cardBtn">
-    อ่านรายละเอียด
-  </span>
+  <p>
+    สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง
+    เพื่อช่วยพยุงความนิ่ง และความมั่นคงภายในในจังหวะของคุณ
+  </p>
 
+  <span class="cardBtn" aria-hidden="true">อ่านรายละเอียด</span>
 </a>
-   
-        <p>
-          สำหรับคนที่อยากฝึกเองที่บ้าน: ชุดฝึกเบา-ลึก-ต่อเนื่อง
-          เพื่อช่วยพยุงความนิ่ง และความมั่นคงภายในในจังหวะของคุณ
-        </p>
-      </a>
+
       
     </div>
   </div>
