--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
       <span class="brandText">KRUNIKI</span>
     </a>
 
-    <nav class="navLinks" aria-label="Primary navigation">
-      <a href="about.html">เกี่ยวกับ</a>
-      <a href="services.html">บริการ</a>
-      <a href="resources.html">Resources</a>
-      <a href="#contact">ติดต่อ</a>
-    </nav>
+<nav class="navLinks" aria-label="Primary navigation">
+     <a href="index.html">หน้าแรก</a>
+  <a href="about.html">เกี่ยวกับ</a>
+  <a href="services.html">บริการ</a>
+  <a href="resources.html">คลังความรู้</a>
+  <a href="contact.html">ติดต่อ</a>
+</nav>
 
     <button class="navToggle"
       type="button"
@@ -34,12 +35,14 @@
     </button>
   </div>
 
-  <nav id="mobileMenu" class="navDrawer" aria-label="Mobile navigation">
-    <a href="about.html">เกี่ยวกับ</a>
-    <a href="services.html">บริการ</a>
-    <a href="resources.html">Resources</a>
-    <a href="#contact">ติดต่อ</a>
-  </nav>
+  <nav id="mobileMenu" class="mobileMenu" hidden>
+  <a href="index.html">หน้าแรก</a>
+  <a href="about.html">เกี่ยวกับ</a>
+  <a href="services.html">บริการ</a>
+  <a href="resources.html">คลังความรู้</a>
+  <a href="contact.html">ติดต่อ</a>
+</nav>
+
 </header>
 
   <main>
