--- a/index.html
+++ b/index.html
@@ -23,32 +23,14 @@
 </head>
 
 <body>
-  <header class="siteHeader">
-    <div class="navInner">
-      <a class="brand" href="index.html" aria-label="KRUNIKI Home">
-        <span class="dot" aria-hidden="true"></span>
-        <span class="brandText">KRUNIKI</span>
-      </a>
+<header class="siteHeader">
+  <div class="navInner">
+    <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+      <span class="dot" aria-hidden="true"></span>
+      <span class="brandText">KRUNIKI</span>
+    </a>
 
-      <nav class="navLinks" aria-label="Primary navigation">
-        <a href="shop.html">SHOP</a>
-        <a href="index.html">หน้าแรก</a>
-        <a href="about.html">เกี่ยวกับ</a>
-        <a href="services.html">บริการ</a>
-        <a href="resources.html">คลังความรู้</a>
-        <a href="contact.html">ติดต่อ</a>
-      </nav>
-
-      <button class="navToggle"
-        type="button"
-        aria-label="เปิดเมนู"
-        aria-expanded="false"
-        aria-controls="mobileMenu">
-        ☰
-      </button>
-    </div>
-
-    <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
+    <nav class="navLinks" aria-label="Primary navigation">
       <a href="shop.html">SHOP</a>
       <a href="index.html">หน้าแรก</a>
       <a href="about.html">เกี่ยวกับ</a>
@@ -56,7 +38,22 @@
       <a href="resources.html">คลังความรู้</a>
       <a href="contact.html">ติดต่อ</a>
     </nav>
-  </header>
+
+    <button class="navToggle" type="button"
+      aria-label="เปิดเมนู"
+      aria-expanded="false"
+      aria-controls="mobileMenu">☰</button>
+  </div>
+
+  <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
+    <a href="shop.html">SHOP</a>
+    <a href="index.html">หน้าแรก</a>
+    <a href="about.html">เกี่ยวกับ</a>
+    <a href="services.html">บริการ</a>
+    <a href="resources.html">คลังความรู้</a>
+    <a href="contact.html">ติดต่อ</a>
+  </nav>
+</header>
   
     <div class="right">
       <!-- SOCIAL ICONS (TOP RIGHT) -->
