--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
       <a href="contact.html">ติดต่อ</a>
     </nav>
 
-    <button class="navToggle" type="button"
+    <button class="navToggle"
+      type="button"
       aria-label="เปิดเมนู"
       aria-expanded="false"
       aria-controls="mobileMenu">☰</button>
   </div>
 
-  <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
+  <nav id="mobileMenu" class="mobileMenu" aria-label="Mobile navigation">
     <a href="shop.html">SHOP</a>
     <a href="index.html">หน้าแรก</a>
     <a href="about.html">เกี่ยวกับ</a>
