--- a/index.html
+++ b/index.html
@@ -11,41 +11,10 @@
 </head>
 
 <body>
-<header class="siteHeader">
-  <div class="navInner">
-    <a class="brand" href="index.html" aria-label="KRUNIKI Home">
-      <span class="dot" aria-hidden="true"></span>
-      <span class="brandText">KRUNIKI</span>
-    </a>
 
-    <nav class="navLinks" aria-label="Primary navigation">
-      <a href="shop.html">SHOP</a>
-      <a href="index.html">หน้าแรก</a>
-      <a href="about.html">เกี่ยวกับ</a>
-      <a href="services.html">บริการ</a>
-      <a href="resources.html">คลังความรู้</a>
-      <a href="contact.html">ติดต่อ</a>
-    </nav>
-
-    <button class="navToggle"
-      type="button"
-      aria-label="เปิดเมนู"
-      aria-expanded="false"
-      aria-controls="mobileMenu">☰</button>
-  </div>
-
-  <nav id="mobileMenu" class="mobileMenu" aria-label="Mobile navigation">
-    <a href="shop.html">SHOP</a>
-    <a href="index.html">หน้าแรก</a>
-    <a href="about.html">เกี่ยวกับ</a>
-    <a href="services.html">บริการ</a>
-    <a href="resources.html">คลังความรู้</a>
-    <a href="contact.html">ติดต่อ</a>
-  </nav>
-</header>
-  
+  <!-- TOPBAR (Social RIGHT only) -->
+  <div class="topbar">
     <div class="right">
-      <!-- SOCIAL ICONS (TOP RIGHT) -->
       <div class="social" aria-label="ช่องทางโซเชียลของ KRUNIKI">
         <!-- LINE OA -->
         <a class="iconbtn gold" href="https://lin.ee/qdp20di" target="_blank" rel="noopener" aria-label="LINE OA">
@@ -96,12 +65,40 @@
     </div>
   </div>
 
-    </div><!-- /social -->
+  <!-- HEADER (Menu system only) -->
+  <header class="siteHeader">
+    <div class="navInner">
+      <a class="brand" href="index.html" aria-label="KRUNIKI Home">
+        <span class="dot" aria-hidden="true"></span>
+        <span class="brandText">KRUNIKI</span>
+      </a>
 
-  </div><!-- /subBarInner -->
-</section><!-- /subBar -->
+      <nav class="navLinks" aria-label="Primary navigation">
+        <a href="shop.html">SHOP</a>
+        <a href="index.html">หน้าแรก</a>
+        <a href="about.html">เกี่ยวกับ</a>
+        <a href="services.html">บริการ</a>
+        <a href="resources.html">คลังความรู้</a>
+        <a href="contact.html">ติดต่อ</a>
+      </nav>
 
-<main class="wrap">
+      <button class="navToggle" type="button"
+        aria-label="เปิดเมนู"
+        aria-expanded="false"
+        aria-controls="mobileMenu">☰</button>
+    </div>
+
+    <nav id="mobileMenu" class="mobileMenu" aria-label="Mobile navigation">
+      <a href="shop.html">SHOP</a>
+      <a href="index.html">หน้าแรก</a>
+      <a href="about.html">เกี่ยวกับ</a>
+      <a href="services.html">บริการ</a>
+      <a href="resources.html">คลังความรู้</a>
+      <a href="contact.html">ติดต่อ</a>
+    </nav>
+  </header>
+
+  <main class="wrap">
 
   <!-- HERO -->
   <section id="about" class="panel hero">
