--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         aria-controls="mobileMenu">☰</button>
     </div>
 
-    <nav id="mobileMenu" class="mobileMenu" aria-label="Mobile navigation">
+   <nav id="mobileMenu" class="mobileMenu" hidden aria-label="Mobile navigation">
       <a href="shop.html">SHOP</a>
       <a href="index.html">หน้าแรก</a>
       <a href="about.html">เกี่ยวกับ</a>
