--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="KRUNIKI — Heart Awakening • Self-Healing • Conscious Learning" />
   <!-- 🔗 เชื่อมไฟล์ CSS -->
   <link rel="stylesheet" href="assets/style.css">
-<script src="assets/main.js" defer></script>
+<link rel="stylesheet" href="assets/style-v2.css">
 </head>
 
 <body>
